# pyhygiene

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
assets/: detail.html  make_thumbnail.py
pyhygiene/: __init__.py  audit.py  clean.py  cli.py  guard.py  plan.py
scripts/: build-skill.sh
tests/: SCENARIOS.md  test_audit.py  test_caches.py  test_cli_and_handoff.py  test_guard.py  test_plan_clean.py  test_scenarios.py
