[project]
name = "pyhygiene"
version = "0.2.1"
description = "Diagnose and safely clean up messy Python environments (interpreters, venvs, orphaned packages, regenerable caches) — automation-aware, backup-first, never auto-sudo."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["python", "venv", "cleanup", "pyenv", "homebrew", "devtools"]
dependencies = []  # stdlib only → runs anywhere, installable via `uvx pyhygiene`

[project.scripts]
pyhygiene = "pyhygiene.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyhygiene"]
