[project]
name = "pyhygiene"
dynamic = ["version"]  # single-sourced from pyhygiene/__init__.py:__version__
description = "Diagnose and safely clean up messy Python environments (interpreters, venvs, orphaned packages, regenerable caches) — automation-aware, backup-first, never auto-sudo."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ogyutae", email = "nsjokt@gmail.com" }]
keywords = ["python", "venv", "cleanup", "pyenv", "homebrew", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]
dependencies = []  # stdlib only → runs anywhere, installable via `uvx pyhygiene`

[project.urls]
Homepage = "https://github.com/nsjokt/pyhygiene"
Repository = "https://github.com/nsjokt/pyhygiene"
Issues = "https://github.com/nsjokt/pyhygiene/issues"

[project.scripts]
pyhygiene = "pyhygiene.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyhygiene/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pyhygiene"]

[tool.hatch.build.targets.sdist]
# keep the published source tarball lean — marketplace/README assets and built
# skill artifacts don't belong in the PyPI sdist.
exclude = ["/assets", "*.skill", "*.zip"]
